# delineo

./: .gitignore  README.md  conda-environment.yaml  main.py  pyproject.toml
src/data-transformation/: .gitignore  gen_training_set_metadata.py  gen_ui_prompts.py  generate_ui_captions.py  mud_preprocessing.py  prepare_training_metadata.py  preprocessing_mud.py  preprocessing_rico.py  swire_preprocessing.py  test_mud_processing.ipynb  testing_mud.ipynb  utils.py  vins_preprocessing.py
src/experiments/: captioning-rico-ui.ipynb  get_all_mud_classes.ipynb  list_ui_dataset_classes.ipynb
src/experiments/controlnet/: test_controlnet.py
src/training/: README.md
src/training/controlnet-training/: README.md  start_training.sh  train_controlnet_sd3.py
src/training/lora/dataset/: README.md
src/training/sd3.5-main/: sd3_impls.py  sd3_infer.py
